# enph253_team8_software

./: README.md
cv-and-pi/: platformio.ini
cv-and-pi/src/: main.cpp
cv-and-pi/src/hardware/: CustomServo.cpp  CustomServo.h
pid-control/src/: main.cpp  motor_ctrl_3sensors.cpp
robot-codebase/: CMakeLists.txt  compile_commands.json  platformio.ini
robot-codebase/src/: PinAssignments.h  archived_functions.cpp  constants.h  extra_functions.cpp  functions.cpp  functions.h  globals.cpp  globals.h  main.cpp  tasks.cpp  tasks.h
robot-codebase/src/components/: Claw.cpp  Claw.h  DriveMotors.cpp  DriveMotors.h  RobotWheels.cpp  RobotWheels.h
robot-codebase/src/hardware/: CustomServo.cpp  CustomServo.h  HallSensor.cpp  HallSensor.h  Hallsensor.cpp  Hallsensor.h  IRSensor.cpp  IRSensor.h  Motor.cpp  Motor.h  RotaryEncoder.cpp  RotaryEncoder.h  Servo.h
robot-codebase/src/interfaces/: motor_interface.h  servo_interface.h
robot-codebase/test/: hbridge_test.cpp  servo_test.cpp
src/: main.cpp
